# kickoff

./: .bazelrc  .gitattributes  .gitignore  AUTHORS  BUILD.bazel  CONTRIBUTORS  Cargo.toml  LICENSE  MODULE.bazel  README.md  WORKSPACE.bzlmod  cargo-bazel.lock.json
.github/workflows/: ci.yaml
cli/: BUILD.bazel  Cargo.toml
cli/src/: create.rs  main.rs
runtime/: BUILD.bazel  Cargo.toml
runtime/src/: main.rs
runtime/src/substitutions/: fs.rs  mod.rs
src/: io.rs  lib.rs  process.rs
tools/bazel/: BUILD.bazel  defs.bzl
