# See more keys and their definitions at:
# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["cli", "runtime"]

[package]
name = "kickoff"
version = "0.0.1"
edition = "2021"

[dependencies]
libc = { version = "0.2" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
widestring = { version = "1.0.2" }

[dev-dependencies]
rand = { version = "0.8.4" }

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "fat"
codegen-units = 1
