# Copyright (c) 2023 The Nimbus Authors. All rights reserved.
#
# The use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

module(
    name = "build_nimbus_kickoff",
    version = "0.0.1",
    compatibility_level = 0,
    bazel_compatibility = [">=6.3.0"],
)

bazel_dep(name = "platforms", version = "0.0.7")

bazel_dep(name = "hermetic_cc_toolchain", version = "2.1.2")

single_version_override(
    module_name = "hermetic_cc_toolchain",
    patches = [
        "//third_party/hermetic_cc_toolchain:0001-Filter-Invalid-Args.patch",
        "//third_party/hermetic_cc_toolchain:0002-Vendor-Libiconv.patch",
    ],
)

zig_toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")

use_repo(zig_toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.30",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.30",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
    "@zig_sdk//toolchain:windows_amd64",
    "@zig_sdk//toolchain:windows_arm64",
)
