# Copyright (c) 2023 The Nimbus Authors. All rights reserved.
#
# The use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

load("//tools/bazel:defs.bzl", "multiplatform_binary")
load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "cli",
    srcs = glob(["src/**/*.rs"]),
    data = ["//runtime:runtimes"],
    rustc_env = {"BAZEL_GENDIR": "$(GENDIR)"},
    visibility = ["//visibility:public"],
    deps = [
        "//:kickoff",
        "@crates.io//:clap",
        "@crates.io//:phf",
        "@crates.io//:serde_json",
    ],
)

multiplatform_binary(
    name = "clis",
    binary = ":cli",
    target_platforms = {
        "@zig_sdk//platform:linux_arm64": "kickoff-cli-aarch64-linux",
        "@zig_sdk//platform:linux_amd64": "kickoff-cli-x86_64-linux",
        "@zig_sdk//platform:darwin_arm64": "kickoff-cli-aarch64-macos",
        "@zig_sdk//platform:darwin_amd64": "kickoff-cli-x86_64-macos",
        # TODO(alloveras): Uncomment once the Zig linker can handle this target platform.
        # "@zig_sdk//platform:windows_amd64": "kickoff-cli-x86_64-windows.exe",
    },
    visibility = ["//visibility:public"],
)
